finished adding content, need to style

--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
 		<ul class="contactLinks">
 			<li><a href="https://www.facebook.com/msalamanca7"><i class="fab fa-facebook-square social fa-5x"></i>https://www.facebook.com/msalamanca7</a></li>
 			<li><a href="https://www.linkedin.com/in/mariano-salamanca/"><i class="fab fa-linkedin social fa-5x"></i>https://www.linkedin.com/in/mariano-salamanca/</a></li>
-			<li><a href="mailto:msalamancajr@gmail.com"><i class="fas fa-envelope social fa-5x"></i>msalamancajr@gmail.com</a> </li>
+			<li><a href="mailto:msalamancajr@gmail.com"><i class="fas fa-envelope social fa-5x"></i>msalamancajr@gmail.com</a></li>
+			<li><a href="https://github.com/omoosey"><i class="fab fa-github-square social fa-5x"></i>https://github.com/omoosey</a></li>
 		</ul>
 	</div>		
 </body>
