--- a/index.html
+++ b/index.html
@@ -9,18 +9,16 @@
 <body>
 	<div class="nav">
 		<div class="links">
-			<img src="https://media.licdn.com/dms/image/C4D03AQF0dd203_DAtw/profile-displayphoto-shrink_100_100/0?e=1528228800&v=alpha&t=lrDlmw0pbZhzPfXbDW8qNLGJmU7YRyiQuY1Oz5PS2hs" alt="profile-image"/>
+			<img src="./0.jpg" alt="profile-image"/>
 			<ul class="navLinks">
 				<li><a href="#home">Home</a></li>
 				<li><a href="#aboutMe">About Me</a></li>
 				<li><a href="#projects">Projects</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
-			<!-- <div class="social"> -->
-			<!-- <img src="#" alt="fb"/> --><i class="fab fa-facebook-square social"></i>
-			<!-- <img src="#" alt="linked"/> --><i class="fab fa-linkedin social"></i>
-			<!-- <img src="#" alt="email"/> --><i class="fas fa-envelope social"></i>
-			<!-- </div> -->
+				<i class="fab fa-facebook-square social"></i>
+				<i class="fab fa-linkedin social"></i>
+				<i class="fas fa-envelope social"></i>
 		</div>
 	</div>
 	<a id="home"></a>
@@ -52,8 +50,6 @@
 	<div class="projects page" style="overflow: hidden;">
 		<a href="EastWest/index.html"><img class="ewsod" src="img/Screenshot_4.jpg"/></a>
 		<p>Mock up website for East West School of Dance</p>
-		<a href="http://www.uwedsm.com"><img class="ewsod" src="img/Screenshot_1.jpg"/></a>
-		<p>Wedding website</p>
 		<a href="https://codepen.io/omoosey/full/RMoVvE/"><img class="ewsod" src="img/Screenshot_2.jpg"/></a>
 		<br>
 	</div>
@@ -61,7 +57,7 @@
 	<div class="page">
 		<ul class="contactLinks">
 			<li><a href="https://www.facebook.com/msalamanca7"><i class="fab fa-facebook-square social fa-5x"></i>https://www.facebook.com/msalamanca7</a></li>
-			<li><a href="https://www.linkedin.com/in/mariano-salamanca/"><i class="fab fa-linkedin social fa-5x"></i>https://www.linkedin.com/in/mariano-salamanca/</a></li>
+			<li><a href="https://www.linkedin.com/in/msalamancajr/"><i class="fab fa-linkedin social fa-5x"></i>https://www.linkedin.com/in/msalamancajr/</a></li>
 			<li><a href="mailto:msalamancajr@gmail.com"><i class="fas fa-envelope social fa-5x"></i>msalamancajr@gmail.com</a></li>
 			<li><a href="https://github.com/omoosey"><i class="fab fa-github-square social fa-5x"></i>https://github.com/omoosey</a></li>
 		</ul>
