Mobile layout complete

--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
 				<li><a href="#projectsPage">Projects</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
-				<i class="fab fa-facebook-square social"></i>
-				<i class="fab fa-linkedin social"></i>
-				<i class="fas fa-envelope social"></i>
+			<a href="https://github.com/omoosey"><i class="fab fa-github-square social"></i></a>
+			<a href="https://www.linkedin.com/in/msalamancajr/"><i class="fab fa-linkedin social"></i></a>
+			<a href="mailto:msalamancajr@gmail.com"><i class="fas fa-envelope social"></i></a>
 		</div>
 	</nav>
 	<a id="home"></a>
 	<div class="splash page"> 
-		<div id="intro">
+		<div class="center">
 			<h1>Mariano Salamanca Jr.</h1>
 			<h6>-Web developer extraordinaire</h6>
 		</div>
 	</div>
 	<a id="aboutMe"></a>
 	<div class="about page">
-		<div id="intro">
+		<div class="center">
 			<h2>Front End Web Developer</h2>
 			<h3>Programming Languages</h3>
 			<ul>
@@ -57,7 +57,7 @@
 						 		(max-width: 765px) 745px,
 						 		1024px" 
 						 src="img/myreads-1024w.jpg" alt="my_reads_project">
-					<p>My Reads Project - <a href="https://omoosey.github.io/reactnd-project-myreads-starter/">Link</a></p>
+					<p><strong>My Reads Project - </strong><a href="https://omoosey.github.io/reactnd-project-myreads-starter/">Link</a></p>
 				</div>
 				<div class="projectPreview neighborhoodMap">
 					<img srcset="img/neighborhood-map-360w.jpg 360w,
@@ -67,7 +67,7 @@
 						 		(max-width: 765px) 745px,
 						 		1024px" 
 						 src="img/neighborhood-map-1024w.jpg" alt="neighborhood_map_project">
-					<p>Neighborhood Map - <a href="https://omoosey.github.io/fend-neighborhood-map/">Link</a></p>
+					<p><strong>Neighborhood Map - </strong><a href="https://omoosey.github.io/fend-neighborhood-map/">Link</a></p>
 				</div>
 				<div class="projectPreview arcadeGame">
 					<img srcset="img/arcade-game-360w.jpg 360w,
@@ -77,18 +77,20 @@
 						 		(max-width: 765px) 745px,
 						 		1024px" 
 						 src="img/arcade-game-1024w.jpg" alt="arcade_game_project">
-					<p>Arcade Game Clone - <a href="https://omoosey.github.io/fend-project-arcade-game/">Link</a></p>
+					<p><strong>Arcade Game Clone - </strong><a href="https://omoosey.github.io/fend-project-arcade-game/">Link</a></p>
 				</div>
 			</section>
 		</section>
 	<a id="contact"></a>
 	<div class="page">
+		<div class="center">
 		<ul class="contactLinks">
-			<li><a href="https://www.facebook.com/msalamanca7"><i class="fab fa-facebook-square social fa-5x"></i>https://www.facebook.com/msalamanca7</a></li>
-			<li><a href="https://www.linkedin.com/in/msalamancajr/"><i class="fab fa-linkedin social fa-5x"></i>https://www.linkedin.com/in/msalamancajr/</a></li>
+			<li><a href="https://www.facebook.com/msalamanca7"><i class="fab fa-facebook-square social fa-5x"></i>www.facebook.com/msalamanca7</a></li>
+			<li><a href="https://www.linkedin.com/in/msalamancajr/"><i class="fab fa-linkedin social fa-5x"></i>www.linkedin.com/in/msalamancajr</a></li>
 			<li><a href="mailto:msalamancajr@gmail.com"><i class="fas fa-envelope social fa-5x"></i>msalamancajr@gmail.com</a></li>
-			<li><a href="https://github.com/omoosey"><i class="fab fa-github-square social fa-5x"></i>https://github.com/omoosey</a></li>
+			<li><a href="https://github.com/omoosey"><i class="fab fa-github-square social fa-5x"></i>www.github.com/omoosey</a></li>
 		</ul>
+	</div>
 	</div>
 	<script type="text/javascript" src="./main.js"></script>		
 </body>
