Add viewport meta tag

--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:300,400|Proza+Libre:400,500" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 	<nav>
 		<div class="links">
 			<img src="./0.jpg" alt="profile-image"/>
-			<ul id="navLinks">
-				<li class="active"><a href="#home">Home</a></li>
-				<li><a href="#aboutMe">About Me</a></li>
-				<li><a href="#projectsPage">Projects</a></li>
-				<li><a href="#contact">Contact</a></li>
-			</ul>
-			<a href="https://github.com/omoosey"><i class="fab fa-github-square social"></i></a>
-			<a href="https://www.linkedin.com/in/msalamancajr/"><i class="fab fa-linkedin social"></i></a>
-			<a href="mailto:msalamancajr@gmail.com"><i class="fas fa-envelope social"></i></a>
+			<div id="navLinks">
+				<a class="active" href="#home">Home</a>
+				<a href="#aboutMe">About Me</a>
+				<a href="#projectsPage">Projects</a>
+				<a href="#contact">Contact</a>
+				<a href="https://github.com/omoosey"><i class="fab fa-github-square social"></i></a>
+				<a href="https://www.linkedin.com/in/msalamancajr/"><i class="fab fa-linkedin social"></i></a>
+				<a href="mailto:msalamancajr@gmail.com"><i class="fas fa-envelope social"></i></a>
+			</div>
 		</div>
 	</nav>
 	<a id="home"></a>
