Fixed styling for mobile first design

--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
 <body>
 	<nav>
 		<div class="links">
-			<img src="./0.jpg" alt="profile-image"/>
+			<img class="hidden" src="./0.jpg" alt="profile-image"/>
 			<div id="navLinks">
 				<a class="active" href="#home">Home</a>
 				<a href="#aboutMe">About Me</a>
 				<a href="#projectsPage">Projects</a>
 				<a href="#contact">Contact</a>
-				<a href="https://github.com/omoosey"><i class="fab fa-github-square social"></i></a>
-				<a href="https://www.linkedin.com/in/msalamancajr/"><i class="fab fa-linkedin social"></i></a>
-				<a href="mailto:msalamancajr@gmail.com"><i class="fas fa-envelope social"></i></a>
+				<a class="hidden" href="https://github.com/omoosey"><i class="fab fa-github-square social"></i></a>
+				<a class="hidden" href="https://www.linkedin.com/in/msalamancajr/"><i class="fab fa-linkedin social"></i></a>
+				<a class="hidden" href="mailto:msalamancajr@gmail.com"><i class="fas fa-envelope social"></i></a>
 			</div>
 		</div>
 	</nav>
 	<a id="home"></a>
 	<div class="splash page"> 
-		<div class="center">
-			<h1>Mariano Salamanca Jr.</h1>
+		<div class="center intro">
+			<h2>Mariano Salamanca Jr.</h2>
 			<h6>-Web developer extraordinaire</h6>
 		</div>
 	</div>
