--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 	<div class="splash page"> 
 		<div class="center intro">
 			<h2>Mariano Salamanca Jr.</h2>
-			<h6>-Web developer extraordinaire</h6>
+			<h4>-Web developer extraordinaire</h4>
 		</div>
 	</div>
 	<a id="aboutMe"></a>
 	<div class="about page">
-		<div class="center">
+		<div class="center info">
 			<h2>Front End Web Developer</h2>
 			<h3>Programming Languages</h3>
 			<ul>
